--- a/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.css
@@ -46,6 +46,14 @@
     align-items: center;
 }
 
+.upper__color-group__overlay.activated > * {
+    opacity: 1;
+}
+
+.upper__color-group__overlay.activated {
+    border: 1px solid var(--secondary-color);
+}
+
 .upper__color-group__overlay.else {
     background-color: transparent;
     border: 1px solid var(--dark-level2-border-color);
@@ -86,15 +94,6 @@
     position: relative;
 }
 
-.lower__color-group input {
-    position: absolute;
-    background-color: var(--dark-background-color);
-    top: 6px;
-    left: 6px;
-    z-index: 3;
-}
-
-
 .lower__color-group__image {
     width: 100%;
     object-fit: cover;
@@ -108,6 +107,14 @@
     justify-content: center;
     align-items: center;
     background-color: #00000067;
+}
+
+.lower__color-group__overlay.activated > * {
+    opacity: 1;
+}
+
+.lower__color-group__overlay.activated {
+    border: 1px solid var(--secondary-color);
 }
 
 .lower__color-group__overlay span {
