--- a/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.html
@@ -1,89 +1,33 @@
-<div class="wrapper">
-    <div class="upper">
-        <div style="background-color: #e32636;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Đỏ</span>
-            </div>
-            <input type="checkbox">
+<div class="wrapper" id="color-wrapper">
+    <ng-container *ngFor="let x of categoryColorList">
+        <div class="upper">
+            <ng-container *ngFor="let y of x.level3List">
+                <ng-container *ngIf="!isSpecialGroup(y.categoryDesc)">
+                    <div [attr.data-color]="y.categoryDesc"  class="upper__color-group color-item">
+                        <div (click)="toggleToFilter($event, { id: y.id, name: y.name, level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId } )"
+                        [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                        class="hover-effect-brighter-opaquer upper__color-group__overlay">
+                            <span>{{y.name}}</span>
+                        </div>
+                    </div>
+                </ng-container>
+            </ng-container>
         </div>
-        <div style="background-color: #e69138;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay dark-text">
-                <span>Cam</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: #ffd966;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay dark-text">
-                <span>Vàng</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: #6aa84f;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Xanh lục</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: #3d85c6;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Xanh lam</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: #a64d79;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Tím</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: black;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Đen</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: whitesmoke;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay dark-text">
-                <span>Trắng</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: #333;" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Xám</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div style="background-color: rgb(94, 43, 9);" class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay">
-                <span>Nâu</span>
-            </div>
-            <input type="checkbox">
-        </div>
-        <div class="upper__color-group">
-            <div class="hover-effect-brighter-opaquer upper__color-group__overlay else">
-                <span>Khác</span>
-            </div>
-            <input type="checkbox">
-        </div>
-    </div>
 
-    <div class="lower">
-        <div class="lower__color-group">
-            <img src="https://www.color-meanings.com/wp-content/uploads/Black-and-white-paint-swirl-1024x683.jpeg"
-                alt="" class="lower__color-group__image">
-            <div class="hover-effect-brighter-opaquer lower__color-group__overlay">
-                <span>Trắng đen</span>
-            </div>
-            <input type="checkbox">
+        <div class="lower">
+            <ng-container *ngFor="let y of x.level3List">
+                <ng-container *ngIf="isSpecialGroup(y.categoryDesc)">
+                    <div class="lower__color-group">
+                        <img src="{{y.categoryDesc}}"
+                            alt="" class="lower__color-group__image">
+                        <div (click)="toggleToFilter($event, { id: y.id, name: y.name, level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId } )"
+                        [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                        class="hover-effect-brighter-opaquer lower__color-group__overlay">
+                            <span>{{y.name}}</span>
+                        </div>
+                    </div>
+                </ng-container>
+            </ng-container>
         </div>
-        <div class="lower__color-group">
-            <img src="https://media.istockphoto.com/id/1248542684/vector/abstract-blurred-colorful-background.jpg?s=612x612&w=0&k=20&c=6aJX8oyUBsSBZFQUCJDP7KZ1y4vrf-wEH_SJsuq7B5I="
-                alt="" class="lower__color-group__image">
-            <div class="hover-effect-brighter-opaquer lower__color-group__overlay">
-                <span>Đa sắc màu</span>
-            </div>
-            <input type="checkbox">
-        </div>
-    </div>
+    </ng-container>
 </div>
