--- a/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.html
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/color-category/color-category.component.html
@@ -3,10 +3,12 @@
         <div class="upper">
             <ng-container *ngFor="let y of x.level3List">
                 <ng-container *ngIf="!isSpecialGroup(y.categoryDesc)">
-                    <div [attr.data-color]="y.categoryDesc"  class="upper__color-group color-item">
+                    <div [attr.data-color]="y.categoryDesc" class="upper__color-group color-item">
                         <div (click)="toggleToFilter($event, { id: y.id, name: y.name, level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId } )"
-                        [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
-                        class="hover-effect-brighter-opaquer upper__color-group__overlay">
+                            [ngClass]="{
+                            'activated': isCategoryTagSelected(y.id, x.level2CategoryId),
+                            'dark-text': y.categoryDesc == '#ffd966' || y.categoryDesc == 'whitesmoke'
+                          }" class="hover-effect-brighter-opaquer upper__color-group__overlay">
                             <span>{{y.name}}</span>
                         </div>
                     </div>
@@ -18,11 +20,10 @@
             <ng-container *ngFor="let y of x.level3List">
                 <ng-container *ngIf="isSpecialGroup(y.categoryDesc)">
                     <div class="lower__color-group">
-                        <img src="{{y.categoryDesc}}"
-                            alt="" class="lower__color-group__image">
+                        <img src="{{y.categoryDesc}}" alt="" class="lower__color-group__image">
                         <div (click)="toggleToFilter($event, { id: y.id, name: y.name, level2CategoryId: x.level2CategoryId, level1CategoryId: x.level1CategoryId } )"
-                        [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
-                        class="hover-effect-brighter-opaquer lower__color-group__overlay">
+                            [ngClass]="{ 'activated': isCategoryTagSelected(y.id, x.level2CategoryId) }"
+                            class="hover-effect-brighter-opaquer lower__color-group__overlay">
                             <span>{{y.name}}</span>
                         </div>
                     </div>
