--- a/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.html
+++ b/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.html
@@ -16,7 +16,7 @@
                     <div class="left-side__banner__inside__container__sub_desc">
                         Giá chỉ từ 150.000 VNĐ
                     </div>
-                    <a class="btn landing-page-clickbate" href="../list-page/list-page.html">Mua
+                    <a class="btn landing-page-clickbate" routerLink="/list">Mua
                         ngay</a>
                 </div>
             </div>
